--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,9 +21,9 @@ isPost: True
 {% endif %}
 <section class="lotus-nextpage fn-clear">
     {% if page.previous %}
-    <div class="lotus-nextpage-left"><a class="prev" href="{{ site.shortname }}{{ page.previous.url }}" rel="prev">&laquo;&nbsp;{{ page.previous.title | truncatewords:5 }}</a></div>
+    <div class="lotus-nextpage-left"><a class="prev" href="{{ site.url }}{{ page.previous.url }}" rel="prev">&laquo;&nbsp;{{ page.previous.title | truncatewords:5 }}</a></div>
     {% endif %}
     {% if page.next %}
-    <div class="lotus-nextpage-right"><a class="next" href="{{ site.shortname }}{{ page.next.url }}" rel="next">{{ page.next.title | truncatewords:5 }}&nbsp;&raquo;</a></div>
+    <div class="lotus-nextpage-right"><a class="next" href="{{ site.url }}{{ page.next.url }}" rel="next">{{ page.next.title | truncatewords:5 }}&nbsp;&raquo;</a></div>
     {% endif %}
 </section>
