using unique latest jQuery 1.12.4

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon"  type="image/x-icon" media="screen" href="{{ site.url }}/static/favicon.ico"/>
     <link rel="stylesheet" type="text/css" media="all" href="{{ site.url }}/static/iLotus.css" />
-    <script src="{{ site.url }}/static/js/jquery.js" type="text/javascript"></script>
+    <script src="{{ site.url }}/js/jquery.min.js" type="text/javascript"></script>
 </head>
 <body itemscope itemtype="http://schema.org/WebPage" class="home blog lotus index">
     <nav class="lotus-nav">
