--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,8 +7,8 @@
     <meta name="description" content="{{ page.description }}" />
     <meta name="keywords" content="{{ page.keywords | join: ',' }}" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon"  type="image/x-icon" media="screen" href="{{ site.url }}/static/favicon.ico"/>
-    <link rel="stylesheet" type="text/css" media="all" href="{{ site.url }}/static/iLotus.css" />
+    <link rel="shortcut icon"  type="image/x-icon" media="screen" href="{{ site.url }}/favicon.ico"/>
+    <link rel="stylesheet" type="text/css" media="all" href="{{ site.url }}/css/lotus.css" />
     <script src="{{ site.url }}/js/jquery.min.js" type="text/javascript"></script>
 </head>
 <body itemscope itemtype="http://schema.org/WebPage" class="home blog lotus index">
