--- a/css/lotus.css
+++ b/css/lotus.css
@@ -10,24 +10,24 @@ Theme Name: iLotus
   font-family: 'PT Serif';
   font-style: normal;
   font-weight: 700;
-  src: local('PT Serif Bold'), local('PTSerif-Bold'), url(fonts/PTSerifBold.woff) format('woff');
+  src: local('PT Serif Bold'), local('PTSerif-Bold'), url(../fonts/PTSerifBold.woff) format('woff');
 }
 @font-face {
   font-family: 'PT Serif';
   font-style: italic;
   font-weight: 400;
-  src: local('PT Serif Italic'), local('PTSerif-Italic'), url(fonts/PTSerifItalic.woff) format('woff');
+  src: local('PT Serif Italic'), local('PTSerif-Italic'), url(../fonts/PTSerifItalic.woff) format('woff');
 }
 @font-face {
   font-family: 'PT Serif';
   font-style: normal;
   font-weight: 400;
-  src: local('PT Serif'), local('PTSerif-Regular'), url(fonts/PTSerif.woff) format('woff');
+  src: local('PT Serif'), local('PTSerif-Regular'), url(../fonts/PTSerif.woff) format('woff');
 }
 @font-face {
   font-family: "FontAwesome";
-  src: url('fonts/fontawesome-webfont.eot');
-  src: url('fonts/fontawesome-webfont.eot?#iefix') format('eot'), url('fonts/fontawesome-webfont.woff') format('woff'), url('fonts/fontawesome-webfont.ttf') format('truetype'), url('fonts/fontawesome-webfont.svg#FontAwesome') format('svg');
+  src: url('../fonts/fontawesome-webfont.eot');
+  src: url('../fonts/fontawesome-webfont.eot?#iefix') format('eot'), url('../fonts/fontawesome-webfont.woff') format('woff'), url('../fonts/fontawesome-webfont.ttf') format('truetype'), url('../fonts/fontawesome-webfont.svg#FontAwesome') format('svg');
   font-weight: normal;
   font-style: normal;
 }
