--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,8 @@
     <script src="{{ site.url }}/static/js/scrollTo.js" type="text/javascript"></script>
     <script src="{{ site.url }}/static/js/iLotus.js" type="text/javascript"></script>
     <script src="{{ site.url }}/static/js/typeahead.js" type="text/javascript"></script>
-    {% if page.isPost %}
+    <p>page.layout</p>
+    {% if page.layout %}
     <link rel="stylesheet" type="text/css" href="{{ site.url }}/static/prism.css"/>
     <script src="{{ site.url }}/static/js/prism.js" type="text/javascript"></script>
     <script type="text/x-mathjax-config">
