--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,14 +13,14 @@
 </head>
 <body itemscope itemtype="http://schema.org/WebPage" class="home blog lotus index">
     <nav class="lotus-nav">
-        <ul>{% for link in site.nav %}{% assign active = nil %}{% assign homeClass = nil %}
-            {% if page.url == link.url%}{% assign active = 'current' %}{% endif %}
-            {% if link.class == 'home' %}{% assign homeClass = 'home ' %}{% endif %}
+        <ul>{%- for link in site.nav -%}{%- assign active = nil -%}{%- assign homeClass = nil -%}
+            {%- if page.url == link.url -%}{%- assign active = 'current' -%}{%- endif -%}
+            {%- if link.class == 'home' -%}{%- assign homeClass = 'home ' -%}{%- endif -%}
             <li class="{{ homeClass }}{{ active }}">
                 <a href="{% if link.url %}{{ site.url }}{{ link.url }}{% else %}#{% endif %}" rel="{% if link.rel %}{{ link.rel }}{% else %}bookmark{% endif %}" title="{{link.text}}" {%if link.id %} id = "{{ link.id }}"{% endif %} >
                     <i class="{{ link.icon }}"></i>
                 </a>
-            </li>{% endfor %}
+            </li>{%- endfor -%}
         </ul>
     </nav>
     {{ content }}
@@ -30,14 +30,15 @@
     <script src="{{ site.url }}/static/js/scrollTo.js" type="text/javascript"></script>
     <script src="{{ site.url }}/static/js/iLotus.js" type="text/javascript"></script>
     <script src="{{ site.url }}/static/js/typeahead.js" type="text/javascript"></script>
-    {% if page.isPost %}
-    <link rel="stylesheet" type="text/css" href="{{ site.url }}/static/prism.css"/>
-    <script src="{{ site.url }}/static/js/prism.js" type="text/javascript"></script>
+    {%- if page.layout == 'post' -%}
+    <link rel="stylesheet" type="text/css" href="{{ site.url }}/css/prism.css"/>
+    <script src="{{ site.url }}/js/prism.js" type="text/javascript"></script>
+    {%- endif -%}
     <script type="text/x-mathjax-config">
         MathJax.Hub.Config({ tex2jax: {inlineMath: [["$","$"],["\\(","\\)"]]} });
     </script>
-    <script type="text/javascript" src="http://cdn.bootcss.com/mathjax/2.4.0/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-    {% endif %}
+    <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    
     <div class="search-tool" style="position: fixed; top: 0px ; bottom: 0px; left: 0px; right:  0px;
           opacity: 0.95; background-color: #111111; z-index: 9999; display: none;">
         <input type="text" class="search-content" id="search-content" placeholder="文章标题"/>
