--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,8 +8,8 @@
     <meta name="keywords" content="{{ page.keywords | join: ',' }}" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon"  type="image/x-icon" media="screen" href="{{ site.url }}/favicon.ico"/>
-    <link rel="stylesheet" type="text/css" media="all" href="{{ site.url }}/css/lotus.css" />
-    <script src="{{ site.url }}/js/jquery.min.js" type="text/javascript"></script>
+    <link rel="stylesheet" type="text/css" media="all" href="{{ site.url }}/css/blog-lotus.css" />
+    <script src="{{ site.url }}/js/main-blog-jquery.min.js" type="text/javascript"></script>
 </head>
 <body itemscope itemtype="http://schema.org/WebPage" class="home blog lotus index">
     <nav class="lotus-nav">
@@ -27,12 +27,12 @@
     <footer class="lotus-footer">
     	<p>Copyright © 2015-2016 {{ site.author }}, Powered by Jekyll. Thanks <a href="http://www.zhanxin.info" target="_blank">Pizn</a>.</p>
     </footer>
-    <script src="{{ site.url }}/static/js/scrollTo.js" type="text/javascript"></script>
-    <script src="{{ site.url }}/static/js/iLotus.js" type="text/javascript"></script>
-    <script src="{{ site.url }}/static/js/typeahead.js" type="text/javascript"></script>
+    <script src="{{ site.url }}/js/blog-scrollTo.js" type="text/javascript"></script>
+    <script src="{{ site.url }}/js/blog-iLotus.js" type="text/javascript"></script>
+    <script src="{{ site.url }}/js/blog-typeahead.js" type="text/javascript"></script>
     {%- if page.layout == 'post' -%}
-    <link rel="stylesheet" type="text/css" href="{{ site.url }}/css/prism.css"/>
-    <script src="{{ site.url }}/js/prism.js" type="text/javascript"></script>
+    <link rel="stylesheet" type="text/css" href="{{ site.url }}/css/blog-prism.css"/>
+    <script src="{{ site.url }}/js/blog-prism.js" type="text/javascript"></script>
     {%- endif -%}
     <script type="text/x-mathjax-config">
         MathJax.Hub.Config({ tex2jax: {inlineMath: [["$","$"],["\\(","\\)"]]} });
