--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon"  type="image/x-icon" media="screen" href="{{ site.url }}/favicon.ico"/>
     <link rel="stylesheet" type="text/css" media="all" href="{{ site.url }}/css/blog-lotus.css" />
-    <script src="{{ site.url }}/js/main-blog-jquery.min.js" type="text/javascript"></script>
+    <script src="{{ site.url }}/js/jquery-3.4.1.min.js" type="text/javascript"></script>
 </head>
 <body itemscope itemtype="http://schema.org/WebPage" class="home blog lotus index">
     <nav class="lotus-nav">
@@ -27,8 +27,8 @@
     <footer class="lotus-footer">
     	<p>Copyright © 2015-2016 {{ site.author }}, Powered by Jekyll. Thanks <a href="http://www.zhanxin.info" target="_blank">Pizn</a>.</p>
     </footer>
-    <script src="{{ site.url }}/js/blog-scrollTo.js" type="text/javascript"></script>
-    <script src="{{ site.url }}/js/blog-iLotus.js" type="text/javascript"></script>
+    <script src="{{ site.url }}/js/jquery.scrollTo-2.1.2.min.js" type="text/javascript"></script>
+    <script src="{{ site.url }}/js/jquery.cookie-1.4.1.min.js" type="text/javascript"></script>
     <script src="{{ site.url }}/js/blog-typeahead.js" type="text/javascript"></script>
     {%- if page.layout == 'post' -%}
     <link rel="stylesheet" type="text/css" href="{{ site.url }}/css/blog-prism.css"/>
@@ -38,7 +38,7 @@
         MathJax.Hub.Config({ tex2jax: {inlineMath: [["$","$"],["\\(","\\)"]]} });
     </script>
     <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-    
+    <script src="{{ site.url }}/js/blog-iLotus.js" type="text/javascript"></script>
     <div class="search-tool" style="position: fixed; top: 0px ; bottom: 0px; left: 0px; right:  0px;
           opacity: 0.95; background-color: #111111; z-index: 9999; display: none;">
         <input type="text" class="search-content" id="search-content" placeholder="文章标题"/>
