--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,9 +3,9 @@ layout: default
 isPost: True
 ---
 <p class="lotus-breadcrub">
-    <a href="{{ site.url }}/index.html" rel="nofollow" rel="nofollow" title="Home">Home</a>
+    <a href="{{ site.url }}/blog/index.html" rel="nofollow" rel="nofollow" title="Home">Home</a>
     <span> &gt; </span>
-    <a href="{{ site.url }}/archives.html" rel="nofollow" >Archives</a>
+    <a href="{{ site.url }}/blog/archives.html" rel="nofollow" >Archives</a>
     <span> &gt; </span>
     {{ page.title }}
 </p>
