--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,14 +31,23 @@
     <script src="{{ site.url }}/js/jquery.cookie-1.4.1.min.js" type="text/javascript"></script>
     <script src="{{ site.url }}/js/blog-typeahead.js" type="text/javascript"></script>
     <script src="{{ site.url }}/js/blog-iLotus.js" type="text/javascript"></script>
+
     {%- if page.layout == 'post' -%}
-    <link rel="stylesheet" type="text/css" href="{{ site.url }}/css/blog-prism.css"/>
-    <script src="{{ site.url }}/js/blog-prism.js" type="text/javascript"></script>
+    <link rel="stylesheet" type="text/css" href="{{ site.url }}/css/prism.css"/>
+    <script src="{{ site.url }}/js/prism.js" type="text/javascript"></script>
     {%- endif -%}
-    <script type="text/x-mathjax-config">
-        MathJax.Hub.Config({ tex2jax: {inlineMath: [["$","$"],["\\(","\\)"]]} });
+
+     <script type="text/javascript">
+        MathJax = {
+            tex:{
+                inlineMath: [['$', '$'], ['\\(', '\\)']]
+            },
+            svg:{
+                fontCache: 'global'
+            }
+        };
     </script>
-    <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    <script type="text/javascript", id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js"></script>
     <div class="search-tool" style="position: fixed; top: 0px ; bottom: 0px; left: 0px; right:  0px;
           opacity: 0.95; background-color: #111111; z-index: 9999; display: none;">
         <input type="text" class="search-content" id="search-content" placeholder="文章标题"/>
