--- a/css/blog-lotus.css
+++ b/css/blog-lotus.css
@@ -45,8 +45,8 @@ th { text-align: inherit; }
 fieldset, img { border: 0; padding: 0.5em 1em 0.1em; max-width: 95%; display: block; margin-left: auto;margin-right: auto;}
 img { -ms-interpolation-mode: bicubic; }
 iframe { display: block; }
-blockquote { padding: 0.5em 1em 0.1em 1em; margin-bottom: 1em; background: rgba(214, 214, 214, 0.5); border-width: 1px 1px 1px 0.4em; border-color:#d8d8d8 #d8d8d8 #d8d8d8 #d0d0d0; border-style: solid; vertical-align: middle; border-radius: 0px 2px 2px 0; }
-blockquote blockquote { padding: 0 1em 0 1em; margin-left: 2em; border-width: 1px 1px 1px 0.4em; border-style: solid; border-color: rgba(120, 120, 120, 0.1); }
+blockquote { padding: 0.5em 1em 0.1em 1em; margin-bottom: 1em; background: rgba(214, 214, 214, 0.5); border-width: 1px 1px 1px 0.4em; border-color:#d0d0d0 #d0d0d0 #d0d0d0 #616161; border-style: solid; vertical-align: middle; border-radius: 0px 2px 2px 0; }
+blockquote blockquote { border-width: 1px 1px 1px 0.4em; border-style: solid; border-color: rgba(120, 120, 120, 0.5); }
 acronym, abbr { border-bottom: 1px dotted; font-variant: normal; }
 abbr { cursor: help; }
 del { text-decoration: line-through; }
@@ -59,15 +59,14 @@ sub, sup { font-size: 75%; line-height: 0; position: relative; vertical-align: t
 sup { top: -0.5em; }
 sub { bottom: -0.25em; }
 
-a { color: #065588; font-size:  100%; }
+a { color: #065588; font-size: 100%; }
 a:hover { text-decoration: underline; }
 
 ins, a { text-decoration: none; }
 u, .lotus-u { text-decoration: underline; }
 mark { background: #FFFB99; }
 pre, code { font-family: "Courier New", Courier, monospace; overflow-x: auto; vertical-align: middle; }
-pre { font-size: 12px; border: 1px solid #d8d8d8; border-left-width: 0.4em;  background: rgba(214, 214, 214, 0.5); padding: 10px; }
-code { color: #4d4d4d; background: rgba(214, 214, 214, 0.5); padding: 0 0.2em; border: 1px solid #bdbdbd; border-radius: 2px 2px; vertical-align:top;}
+pre { font-size: 12px; border-width: 1px 1px 1px 0.4em; border-color:#d0d0d0 #d0d0d0 #d0d0d0 #358ccb; border-style: solid;  background: rgba(214, 214, 214, 0.5); padding: 10px; }
 small { font-size: 12px; color: #888; }
 
 ::selection 	 	{background: rgba(0, 0, 0, 0.1);}
@@ -420,7 +419,7 @@ li[class^="icon-"].icon-large:before, li[class*="icon-"].icon-large:before {
     overflow: hidden;
     top: 14px;
 }
-h1, h2, h3, h4, h5, h6{ font-weight: 500; font-weight: 700\9; color:#333; }
+h1, h2, h3, h4, h5, h6{ font-weight: 500; font-weight: 700\9; color:#111; }
 
 .lotus h1, .lotus h2, .lotus h3, .lotus h4, .lotus h5, .lotus h6,
 .lotus-h1, .lotus-h2, .lotus-h3, .lotus-h4, .lotus-h5, .lotus-h6 { margin-bottom: 0.4em; line-height: 1.5;}
