--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon"  type="image/x-icon" media="screen" href="{{ site.url }}/favicon.ico"/>
     <link rel="stylesheet" type="text/css" media="all" href="{{ site.url }}/css/blog-lotus.css" />
-    <script src="{{ site.url }}/js/jquery-3.4.1.min.js" type="text/javascript"></script>
+    <script src="{{ site.url }}/js/jquery-3.7.0.min.js" type="text/javascript"></script>
 </head>
 <body itemscope itemtype="http://schema.org/WebPage" class="home blog lotus index">
     <nav class="lotus-nav">
@@ -27,8 +27,8 @@
     <footer class="lotus-footer">
     	<p>Copyright © 2015-2016 {{ site.author }}, Powered by Jekyll. Thanks <a href="http://www.zhanxin.info" target="_blank">Pizn</a>.</p>
     </footer>
-    <script src="{{ site.url }}/js/jquery.scrollTo-2.1.2.min.js" type="text/javascript"></script>
-    <script src="{{ site.url }}/js/jquery.cookie-1.4.1.min.js" type="text/javascript"></script>
+	<script src="https://cdn.jsdelivr.net/npm/jquery.scrollto@2.1.3/jquery.scrollTo.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.5/dist/js.cookie.min.js"></script>
     <script src="{{ site.url }}/js/blog-typeahead.js" type="text/javascript"></script>
     <script src="{{ site.url }}/js/blog-iLotus.js" type="text/javascript"></script>
 
