--- a/css/omegahh.css
+++ b/css/omegahh.css
@@ -3,23 +3,8 @@ Raleway Template
 http://www.templatemo.com/preview/templatemo_421_raleway
 */
 
-<!--@import url(http://fonts.googleapis.com/css?family=Roboto:100,400,300,500,700);
-
-<!--@import url(http://fonts.googleapis.com/css?family=Montserrat:400,700);-->-->
-
-.overlay h4 {
-    position: relative;
-    top: 50%;
-    -webkit-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%);
-}
-
-.header-wrapper:after {
-    content: "";
-    display: table;
-    clear: both;
-}
+<!--@import url(http://fonts.googleapis.com/css?family=Roboto:100,400,300,500,700);-->
+<!--@import url(http://fonts.googleapis.com/css?family=Montserrat:400,700);-->
 
 .blue  { color: #3CF; }
 .green { color: #0F0; }
@@ -50,7 +35,7 @@ blockquote,q {
     quotes: none;
 }
 
-blockquote:before,blockquote:after,q:before,q:after {
+blockquote::before,blockquote::after,q::before,q::after {
     content: '';
     content: none;
 }
@@ -64,18 +49,50 @@ html {
     box-sizing: border-box;
 }
 
-*,*:before,*:after {
+*,*::before,*::after {
     box-sizing: inherit;
+}
+
+/* CSS normalize finished */
+
+@media screen and (min-width: 992px) {
+    .container {
+        padding-right: 40px;
+        padding-left: 40px;
+    }
+}
+
+@media screen and (max-width: 1200px) {
+    .container {
+        padding-right: 40px;
+        padding-left: 40px;
+    }
 }
 
 .site-header {
     margin-bottom: 80px;
+
+	animation: fadeInDown;
+	animation-duration: 1s;
+}
+
+.site-branding h1 {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 30px;
+    font-weight: 700;
+    color: #fff;
+    text-transform: uppercase;
 }
 
 .header-wrapper {
     border-bottom: 2px solid #46494f;
     padding: 60px 0;
     position: relative;
+}
+.header-wrapper::after {
+    content: "";
+    display: table;
+    clear: both;
 }
 
 a.toggle-nav {
@@ -98,14 +115,6 @@ a.toggle-nav:hover {
     color: #fff;
 }
 
-.site-branding h1 {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 30px;
-    font-weight: 700;
-    color: #fff;
-    text-transform: uppercase;
-}
-
 nav.main-navigation {
     text-align: right;
     margin-top: 10px;
@@ -118,26 +127,6 @@ nav.main-navigation {
     }
 }
 
-@media screen and (max-width: 992px) {
-    .menu-responsive {
-        display: none;
-    }
-}
-
-@media screen and (min-width: 993px) {
-    .container {
-        padding-right: 40px;
-        padding-left: 40px;
-    }
-}
-
-@media screen and (max-width: 1040px) {
-    .container {
-        padding-right: 40px;
-        padding-left: 40px;
-    }
-}
-
 ul.main-menu li {
     display: inline-block;
     margin-left: 10px;
@@ -147,6 +136,7 @@ ul.main-menu li a {
     padding: 10px 15px;
     text-transform: uppercase;
     font-size: 13px;
+	font-weight: 400;
 }
 
 ul.main-menu li a.active {
@@ -177,6 +167,23 @@ ul.main-menu li a.active {
         background: inherit;
         color: #4e91c9;
     }
+}
+
+/* Bootstrap Media querys: */
+/* xs: Extra small devices (portrait phones, less than 576px) */
+/* sm: Small devices (landscape phones, 576px and up) */
+/* md: Medium devices (tablets, 768px and up) */
+/* lg: Large devices (desktops, 992px and up) */
+/* xl: Extra large devices (large desktops, 1200px and up) */
+
+/* Omega HH viewed @2023-07-09 */
+
+.overlay h4 {
+    position: relative;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
 }
 
 .content {
