--- a/css/omegahh.css
+++ b/css/omegahh.css
@@ -202,14 +202,14 @@ h2.welcome-title {
     margin-bottom: 30px;
 
 	animation: fadeInLeft;
-	animation-duration: 1.5s;
-    /* animation-delay: 0.1s; */
+	animation-duration: 2s;
+    animation-delay: 0.1s;
 }
 
 .welcome-subtitle {
 	opacity: 0;
 	animation: fadeInRight;
-	animation-duration: 1.5s;
+	animation-duration: 2s;
 	animation-delay: 0.1s;
 	animation-fill-mode: forwards;
 }
@@ -341,8 +341,8 @@ h2.welcome-title {
     left: 0;
 	opacity: 0;
 	animation: fadeIn;
-	animation-duration: 1.5s;
-    animation-delay: 1.7s;
+	animation-duration: 3s;
+    animation-delay: 1s;
 	animation-fill-mode: forwards;
 }
 
@@ -352,7 +352,7 @@ h2.welcome-title {
     color: #32353a;
 	opacity: 0;
 	animation: fadeInRight;
-	animation-duration: 2s;
+	animation-duration: 2.5s;
     animation-delay: 0.5s;
 	animation-fill-mode: forwards;
 }
@@ -392,8 +392,8 @@ h2.welcome-title {
     left: 0;
 	opacity: 0;
 	animation: fadeIn;
-	animation-duration: 1.5s;
-    animation-delay: 3.6s;
+	animation-duration: 2.2s;
+    animation-delay: 2.5s;
 	animation-fill-mode: forwards;
 }
 
@@ -426,16 +426,16 @@ h2.welcome-title {
 .offer-1 {
 	opacity: 0;
 	animation: fadeInLeft;
-	animation-duration: 2s;
-    animation-delay: 2.1s;
+	animation-duration: 2.5s;
+    animation-delay: 2.2s;
 	animation-fill-mode: forwards;
 }
 
 .offer-2 {
 	opacity: 0;
 	animation: fadeInRight;
-	animation-duration: 2s;
-    animation-delay: 2.8s;
+	animation-duration: 2.5s;
+    animation-delay: 2.2s;
 	animation-fill-mode: forwards;
 }
 
@@ -526,19 +526,17 @@ span.offer-right {
 
 .animatescalein {
 	opacity: 0;
-	animation: ScaleIn 0.4s ease-in;
+	animation: ScaleIn 0.6s ease-in;
 	animation-fill-mode: forwards;
 }
 
 .project-item.proj1 { animation-delay: 0.5s; }
-.project-item.proj2 { animation-delay: 0.8s; }
-.project-item.proj3 { animation-delay: 1.1s; }
-.project-item.proj4 { animation-delay: 1.4s; }
-.project-item.proj5 { animation-delay: 1.7s; }
-.project-item.proj6 { animation-delay: 2.0s; }
-.project-item.proj7 { animation-delay: 2.3s; }
-
-/* Omega HH viewed @2023-07-09 */
+.project-item.proj2 { animation-delay: 0.9s; }
+.project-item.proj3 { animation-delay: 1.3s; }
+.project-item.proj4 { animation-delay: 1.7s; }
+.project-item.proj5 { animation-delay: 2.1s; }
+.project-item.proj6 { animation-delay: 2.5s; }
+.project-item.proj7 { animation-delay: 2.9s; }
 
 span.solid-line {
     width: 60px;
@@ -551,60 +549,6 @@ span.solid-line {
     margin-bottom: 30px;
 }
 
-.post-button {
-    font-size: 12px;
-    text-transform: uppercase;
-    font-weight: 700;
-    padding: 12px 20px;
-    background: #eee;
-}
-
-.blog-bg {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    background-size: cover;
-    background-repeat: no-repeat;
-    z-index: 8;
-    -webkit-transition: all 200ms ease-in-out;
-    -moz-transition: all 200ms ease-in-out;
-    -ms-transition: all 200ms ease-in-out;
-    -o-transition: all 200ms ease-in-out;
-    transition: all 200ms ease-in-out;
-}
-
-.post-1 {
-    -moz-animation-delay: 2.3s;
-    -webkit-animation-delay: 2.3s;
-    animation-delay: 2.3s;
-}
-
-.post-2 {
-    -moz-animation-delay: 2.8s;
-    -webkit-animation-delay: 2.8s;
-    animation-delay: 2.8s;
-}
-
-.post-3 {
-    -moz-animation-delay: 3.3s;
-    -webkit-animation-delay: 3.3s;
-    animation-delay: 3.3s;
-}
-
-.blog-content {
-    position: relative;
-    z-index: 9;
-    background: #fff;
-    padding: 60px 30px;
-}
-
-.blog-content p {
-    line-height: 1.75em;
-    margin-bottom: 35px;
-}
-
 .blog-header {
     margin-bottom: 90px;
 }
@@ -613,9 +557,7 @@ span.solid-line {
     font-size: 36px;
     color: #fff;
     margin-bottom: 30px;
-    font-weight: 100;
-    -moz-animation-delay: 0.5s;
-    -webkit-animation-delay: 0.5s;
+    font-weight: 300;
     animation-delay: 0.5s;
 }
 
@@ -623,49 +565,70 @@ span.solid-line {
     font-size: 17px;
     line-height: 1.75em;
     margin-bottom: 35px;
-    -moz-animation-delay: 1.2s;
-    -webkit-animation-delay: 1.2s;
     animation-delay: 1.2s;
 }
 
-.blog-button {
+@keyframes zoomIn {
+    0% {
+        opacity: 0;
+        transform: scale(0.5);
+    }
+    100% {
+        opacity: 1;
+        transform: scale(1);
+    }
+}
+
+.blog-announcement {
+	opacity: 0;
+    animation: zoomIn 2s 1s forwards;
+}
+
+.blog-button a {
     background: #d5b14f;
     text-transform: uppercase;
     font-weight: 700;
     font-size: 12px;
     padding: 12px 20px;
     color: #fff !important;
-    -moz-animation-delay: 1.9s;
-    -webkit-animation-delay: 1.9s;
-    animation-delay: 1.9s;
+	opacity: 0;
+	animation: zoomIn 2s 1.5s forwards;
 }
 
+/* Omega HH viewed @2023-07-12 */
+
 .contact-header {
-    margin-bottom: 100px;
+    margin-bottom: 80px;
 }
 
 .contact-header h2 {
     font-size: 36px;
-    font-weight: 100;
+    font-weight: 300;
     color: #fff;
     margin-bottom: 30px;
-    -moz-animation-delay: 0.5s;
-    -webkit-animation-delay: 0.5s;
+	opacity: 0;
+	animation: fadeInLeft;
+	animation-duration: 2s;
     animation-delay: 0.5s;
+	animation-fill-mode: forwards;
 }
 
 .contact-header p {
     font-size: 17px;
     line-height: 1.75em;
-    -moz-animation-delay: 1.4s;
-    -webkit-animation-delay: 1.4s;
+	opacity: 0;
+	animation: fadeInRight;
+	animation-duration: 2s;
     animation-delay: 1.4s;
+	animation-fill-mode: forwards;
 }
 
 .contact-social {
-    -moz-animation-delay: 2s;
-    -webkit-animation-delay: 2s;
+	opacity: 0;
+	animation: fadeInUp;
+	animation-duration: 2s;
     animation-delay: 2s;
+	animation-fill-mode: forwards;
 }
 
 .contact-social li {
@@ -682,29 +645,11 @@ span.solid-line {
     margin-bottom: 100px;
 }
 
-.googlemap-wrapper {
-    -moz-animation-delay: 2.7s;
-    -webkit-animation-delay: 2.7s;
-    animation-delay: 2.7s;
-    margin: 15px 0px 15px 15px;
-}
-
-.map-canvas {
-    height: 505px;
-}
-
-#map_canvas {
-    width: 100%;
-    height: 505px;
-}
-
-#map_canvas img {
-    max-width: none;
+.canvas-holder {
+	padding: 20px;
 }
 
 .contact-form {
-    -moz-animation-delay: 3.5s;
-    -webkit-animation-delay: 3.5s;
     animation-delay: 3.5s;
     padding-right: 30px;
 }
@@ -804,7 +749,7 @@ body {
     font-family: "Roboto",sans-serif;
     line-height: 1.55;
     text-rendering: optimizeLegibility;
-    -webkit-backface-visibility: hidden;
+    /* -webkit-backface-visibility: hidden; */
     overflow-x: hidden;
 }
 
