--- a/css/omegahh.css
+++ b/css/omegahh.css
@@ -3,8 +3,9 @@ Raleway Template
 http://www.templatemo.com/preview/templatemo_421_raleway
 */
 
-<!--@import url(http://fonts.googleapis.com/css?family=Roboto:100,400,300,500,700);-->
-<!--@import url(http://fonts.googleapis.com/css?family=Montserrat:400,700);-->
+/* Font imports - using HTTPS for security */
+@import url(https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap);
+@import url(https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap);
 
 .blue  { color: #3CF; }
 .green { color: #0F0; }
