Optimize site performance, SEO, accessibility and update research focus
- Replace CSS @import with link tags and preconnect hints for fonts/CDNs
- Add font-display: swap to all @font-face in blog-lotus.css
- Replace animate.css library with single fadeInDown keyframe
- Add descriptive alt text to all images in index.html
- Gate MathJax loading behind page.math frontmatter flag
- Remove console.log statements from fractal.js
- Add Open Graph meta tags to index.html and blog layout
- Add JSON-LD BlogPosting structured data to post layout
- Fix duplicate rel=nofollow in post.html and about.html
- Remove unused .blue/.green/.pink utility classes
- Update research focus to AIGC, AI Agents and Genomics

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,8 +2,21 @@
 layout: default
 isPost: True
 ---
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "BlogPosting",
+  "headline": {{ page.title | jsonify }},
+  "author": {
+    "@type": "Person",
+    "name": {{ page.author | jsonify }}
+  },
+  "datePublished": "{{ page.date | date_to_xmlschema }}",
+  "url": "{{ site.url }}{{ page.url }}"
+}
+</script>
 <p class="lotus-breadcrub">
-    <a href="{{ site.url }}/blog/index.html" rel="nofollow" rel="nofollow" title="Home">Home</a>
+    <a href="{{ site.url }}/blog/index.html" rel="nofollow" title="Home">Home</a>
     <span> &gt; </span>
     <a href="{{ site.url }}/blog/archives.html" rel="nofollow" >Archives</a>
     <span> &gt; </span>
