--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,12 @@
     <meta name="author" content="{{ site.author }}" />
     <meta name="description" content="{{ page.description }}" />
     <meta name="keywords" content="{{ page.keywords | join: ',' }}" />
+    <meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
+    <meta property="og:description" content="{{ page.description }}">
+    <meta property="og:type" content="{% if page.layout == 'post' %}article{% else %}website{% endif %}">
+    <meta property="og:url" content="{{ site.url }}{{ page.url }}">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin>
     <link rel="shortcut icon"  type="image/x-icon" media="screen" href="{{ site.url }}/favicon.ico"/>
     <link rel="stylesheet" type="text/css" media="all" href="{{ site.url }}/css/blog-lotus.css" />
     <script src="{{ site.url }}/js/jquery-3.7.0.min.js" type="text/javascript"></script>
@@ -37,7 +42,8 @@
     <script src="{{ site.url }}/js/prism.js" type="text/javascript"></script>
     {%- endif -%}
 
-     <script type="text/javascript">
+    {%- if page.math -%}
+    <script type="text/javascript">
         MathJax = {
             tex:{
                 inlineMath: [['$', '$'], ['\\(', '\\)']]
@@ -47,7 +53,8 @@
             }
         };
     </script>
-    <script type="text/javascript", id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js"></script>
+    <script type="text/javascript" id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js"></script>
+    {%- endif -%}
     <div class="search-tool" style="position: fixed; top: 0px ; bottom: 0px; left: 0px; right:  0px;
           opacity: 0.95; background-color: #111111; z-index: 9999; display: none;">
         <input type="text" class="search-content" id="search-content" placeholder="文章标题"/>
