--- a/css/omegahh.css
+++ b/css/omegahh.css
@@ -6,14 +6,18 @@ http://www.templatemo.com/preview/templatemo_421_raleway
 /* CSS Reset */
 @import url('reset.css');
 
-/* Font imports - using HTTPS for security */
-@import url(https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap);
-@import url(https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap);
+/* Fonts loaded via <link> tags in HTML for better performance */
 
-/* Utility Colors */
-.blue  { color: #3CF; }
-.green { color: #0F0; }
-.pink  { color: #D00; }
+@keyframes fadeInDown {
+	from {
+		opacity: 0;
+		transform: translate3d(0, -20px, 0);
+	}
+	to {
+		opacity: 1;
+		transform: translate3d(0, 0, 0);
+	}
+}
 
 :root {
 	--animate-duration: 1s;
